--- a/areas/xdp-tutorial.org
+++ b/areas/xdp-tutorial.org
@@ -125,3 +125,10 @@ Update basic04 xdp_stats via XDP-id
 *** TODO XDP-tutorial: drawing and desc of veth-testlab
 *** TODO Best practices for using multiple programs on the same interface
 
+*** TODO Tutorial for debugging and introspection
+
+Things like
+
+- Drop monitor (when that lands)
+- How to monitor what a running eBPF program is doing
+
