--- a/xdp-project.org
+++ b/xdp-project.org
@@ -185,6 +185,13 @@ We are probably going to need feature flags for XDP after all. There are use
 cases (e.g. Surricata, VM migration) that will want to know what to expect
 from the system before committing to loading an XDP program.
 
+*** DONE Submit LPC network track talk about: XDP feature detection
+CLOSED: [2019-07-31 Wed 17:10]
+:LOGBOOK:
+- State "DONE"       from "TODO"       [2019-07-31 Wed 17:10]
+:END:
+Title:Improving the XDP User eXperience: via feature detection
+
 *** NEXT Propose a driver API to communicate feature flags
 
 - Daniel: Needs to go through driver BPF ndo
