--- a/conference/Bornhack2019/xdp-tutorial-presentation.org
+++ b/conference/Bornhack2019/xdp-tutorial-presentation.org
@@ -149,8 +149,10 @@ The =testenv= directory contains a helper script to setup a test environment.
 - Requires kernel version *4.19 or higher*
   * Due to =veth= driver getting native-XDP support (incl. fixes)
   * Preferred kernel is *4.20* as =veth= got ethtool statistics
-- See README.org in the testenv directory for instructions
-- Easy alias: =eval $(./testenv alias)=, then =t setup=
+- See /README.org in the testenv directory/ for instructions
+- Easy alias:
+  * *=eval $(./testenv alias)=*,
+  * then *=t setup=*
 
 ** Slide: Namespaces and virtual ethernet devices              :export:
 
