--- a/conference/Bornhack2019/xdp-tutorial-presentation.org
+++ b/conference/Bornhack2019/xdp-tutorial-presentation.org
@@ -129,7 +129,20 @@ CLOSED: [2019-03-19 Tue 11:35]
 :END:
 
 
-* Slide: Testlab on your laptop!
+* Slide: Basic introduction and understanding of eBPF                :export:
+:PROPERTIES:
+:reveal_extra_attr: class="mid-slide"
+:END:
+
+Basic introduction to
+- eBPF bytecode
+- Compiling restricted-C to eBPF
+  * compiler storing it in ELF-format
+  * loading this into the Linux kernel
+
+** Slide:
+
+* Slide: Testlab on your laptop!                                     :export:
 :PROPERTIES:
 :reveal_extra_attr: class="mid-slide"
 :END:
