--- a/conference/LinuxPlumbers2019/xdp-distro-view.org
+++ b/conference/LinuxPlumbers2019/xdp-distro-view.org
@@ -207,6 +207,126 @@ Means: Competing at the same “layer” as DPDK / netmap
  - Via eBPF: makes early network stack *run-time programmable*
  - Cooperates with the kernel stack
 
+* Slide: Multiple XDP programs on a single interface                 :export:
+XDP currently only supports */one program per interface/*.
+
+- So how to support /multiple functions/ in sequence?
+- Driving factors:
+  - Debugging: Enable XDP and still be able to handle the support calls
+  - Composability: User-defined XDP programs combined with packaged ones
+    - E.g.: Run custom filtering, then XDP-enabled Suricata
+
+- Today, multiple programs only possible through *cooperative tail calls*
+  - Implemented differently across projects
+
+Let's look at a couple of examples of how this is done...
+
+** Current multi-program solutions #1: Katran xdp_root
+
+Facebook's [[https://github.com/facebookincubator/katran][Katran load balancer]] includes a mechanism for multi-program loading.
+
+#+begin_src C
+SEC("xdp-root")
+int xdp_root(struct xdp_md *ctx) {
+  __u32 *fd;
+  #pragma clang loop unroll(full)
+  for (__u32 i = 0; i < ROOT_ARRAY_SIZE; i++) {
+    bpf_tail_call(ctx, &root_array, i);
+  }
+  return XDP_PASS;
+}
+#+end_src
+
+/Pros/: Supports multiple programs with one map (second program starts at =i=1=)
+
+/*Cons*/: Programs need to know their place in the sequence, no per-action hooks
+
+** Current multi-program solutions #2: Cloudflare xdpdump
+
+Cloudflare has a [[https://github.com/cloudflare/xdpcap][xdpcap utility]] that can run after other XDP programs:
+
+#+begin_src c
+struct bpf_map_def xdpcap_hook =  {
+	.type = BPF_MAP_TYPE_PROG_ARRAY,
+	.key_size = sizeof(int),
+	.value_size = sizeof(int),
+	.max_entries = 5 }
+
+int xdpcap_exit(struct xdp_md *ctx, void *hook_map, enum xdp_action action) {
+    bpf_tail_call(ctx, hook_map, action);
+    return action;
+}
+
+int xdp_main(struct xdp_md *ctx) {
+	return xdpcap_exit(ctx, &xdpcap_hook, XDP_PASS);
+}
+#+end_src
+
+/Pros/: Different hook program per exit code
+
+/*Cons*/: Programs must include helper, needs one map per chain call
+
+** Limitations of current approaches
+
+There are a couple of limitations we would like to overcome:
+
+- Programs need to /include tail call code/
+  - Needs cooperation from program authors
+  - Incompatibility between approaches
+  - Breaks if omitted by mistake
+- Program order *cannot be changed* without recompilation
+- Sysadmin cannot /*enforce policy*/
+  - E.g., always run diagnostics program (such as xdpdump) first
+
+** How to fix this?
+
+Two ingredients:
+
+- A new helper:
+
+#+begin_src c
+int bpf_chain_call(ctx, retcode) {
+  map = get_chain_call_map(ctx.ifindex);
+  if (map) {
+     inner_map = bpf_map_lookup(map, ctx.prog_id);
+     if (inner_map)
+        bpf_tail_call(ctx, inner_map, retcode);
+  }
+  return retcode;
+}
+#+end_src
+
+- An option to /rewrite all return instructions/ to call this helper.
+
+Needs *userspace tooling* to make this consumable (i.e., visualise and
+configure the effective program sequence -> populate maps).
+
+** How to implement? Option #1: userspace only
+
+To do this in userspace (e.g., libbpf), the loader must:
+
+1. Define =bpf_chain_call()= as bpf func
+2. Create+pin outer map per ifindex
+3. Populate map as XDP programs are loaded (key by prog tag?)
+4. Rewrite RETURN instructions to call =bpf_chain_call()= before loading prog
+
+/Pros/: No kernel support needed
+
+/*Cons*/: Only enforceable if all loaders comply
+
+** How to implement? Option #2: Kernel support
+
+With kernel support:
+
+1. Define =bpf_chain_call()= as in-kernel helper
+2. Special per-ifindex map managed by kernel
+3. Verifier enforces rewrite of return codes
+4. Userspace still responsible for populating chain call maps
+
+/Pros/: Enforceable systemwide, verifier already rewrites progs
+
+/*Cons*/: More kernel code, becomes API
+
 * Notes
 
 ** Org-mode hints
