LPC2019: Add reminder that bpf_tail_call() doesn't return
Signed-off-by: Toke Høiland-Jørgensen <toke@redhat.com>

--- a/conference/LinuxPlumbers2019/xdp-distro-view.org
+++ b/conference/LinuxPlumbers2019/xdp-distro-view.org
@@ -279,7 +279,7 @@ int xdp_root(struct xdp_md *ctx) {
   __u32 *fd;
   #pragma clang loop unroll(full)
   for (__u32 i = 0; i < ROOT_ARRAY_SIZE; i++) {
-    bpf_tail_call(ctx, &root_array, i);
+    bpf_tail_call(ctx, &root_array, i);  // reminder: never returns on success!
   }
   return XDP_PASS;
 }
